# httpserver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  server.c
CMakeModules/: CodeCoverage.cmake
cgi/: ascii_art.py  test.py
cmake/: coverage.cmake  cppcheck.cmake  ctest.cmake
include/: buffer.h  event.h  event_handler.h  log.h  parse.h  parser.tab.h  response.h  utils.h
lex_yacc/: lexer.l  parser.y
src/: CMakeLists.txt  buffer.c  event.c  event_handler.c  lex.yy.c  lexer.l  log.c  parse.c  parser.tab.c  parser.y  response.c  utils.c
static_site/: index.html  post.html
tests/: CMakeLists.txt  test.py  test_buffer.c  test_buffer.py  test_event.c  test_event.py  test_parse.c
